Blender crashes if an object has a subdivision surface modifier and a displacement modifier linked to vertex group when switching to weight paint mode #59334

Closed
opened 2018-12-13 21:55:26 +01:00 by Stephen · 8 comments

System Information
Operating system: Windows 10 Pro N 64-bit
Graphics card: NVidia GTX1070

Blender Version
Broken: 2.80 2018-12-13 14:31 33993c056a
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Blender crashes when switching to weight paint, vertext paint or sculpt mode when subsurface modifier active and displacement modifier linked to the vertex group is active.
Object/edit/texture paint work fine.
If you apply the subdivision surface modifier then it doesn't crash.

Exact steps for others to reproduce the errorvertex group displacement.blend
Based on the default startup or an attached .blend file (as simple as possible).
Open attached blend file, switch to weight paint, vertex paint or scult mode.

**System Information** Operating system: Windows 10 Pro N 64-bit Graphics card: NVidia GTX1070 **Blender Version** Broken: 2.80 2018-12-13 14:31 33993c056a5 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Blender crashes when switching to weight paint, vertext paint or sculpt mode when subsurface modifier active and displacement modifier linked to the vertex group is active. Object/edit/texture paint work fine. If you apply the subdivision surface modifier then it doesn't crash. **Exact steps for others to reproduce the error**[vertex group displacement.blend](https://archive.blender.org/developer/F5946292/vertex_group_displacement.blend) Based on the default startup or an attached .blend file (as simple as possible). Open attached blend file, switch to weight paint, vertex paint or scult mode.
Author

Added subscriber: @stephenjenkins42

Added subscriber: @stephenjenkins42

#59278 was marked as duplicate of this issue

#59278 was marked as duplicate of this issue

#59364 was marked as duplicate of this issue

#59364 was marked as duplicate of this issue

Added subscribers: @tombambadil, @Sergey, @ZedDB

Added subscribers: @tombambadil, @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-14 15:12:55 +01:00

I get an assert in my debug build:

BLI_assert failed: /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_util.c:233, MOD_deform_mesh_eval_get(), at 'mesh == ((void *)0) || mesh->totvert == num_verts'

And in my release build, I get this back trace:

Thread 1 "blender" received signal SIGFPE, Arithmetic exception.
0x0000555556bc3dcc in MEM_lockfree_freeN ()
(gdb) bt
- 0  0x0000555556bc3dcc in MEM_lockfree_freeN ()
- 1  0x000055555673409a in BKE_crazyspace_build_sculpt ()
- 2  0x00005555567eac03 in BKE_sculpt_update_mesh_elements ()
- 3  0x00005555563ab611 in ed_vwpaintmode_enter_generic ()
- 4  0x00005555563b3d90 in wpaint_mode_toggle_exec ()
- 5  0x0000555556082cec in wm_operator_invoke ()
- 6  0x0000555556083278 in wm_operator_call_internal ()
- 7  0x000055555608363a in WM_operator_name_call_ptr ()
- 8  0x00005555562e32ab in object_mode_set_exec ()
- 9  0x0000555556082cec in wm_operator_invoke ()
- 10 0x0000555556083278 in wm_operator_call_internal ()
- 11 0x000055555608363a in WM_operator_name_call_ptr ()
- 12 0x000055555622eb2d in ui_apply_but_funcs_after ()
- 13 0x000055555623ed9c in ui_handler_region_menu ()
- 14 0x0000555556085f0a in wm_handlers_do_intern ()
- 15 0x00005555560868cc in wm_handlers_do ()
- 16 0x00005555560870b4 in wm_event_do_handlers ()
- 17 0x000055555607e9c0 in WM_main ()
#18 0x000055555606ab2b in main ()

I'm guessing this is a depsgraph issue because of the assert in eval_get

I get an assert in my debug build: ``` BLI_assert failed: /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_util.c:233, MOD_deform_mesh_eval_get(), at 'mesh == ((void *)0) || mesh->totvert == num_verts' ``` And in my release build, I get this back trace: ``` Thread 1 "blender" received signal SIGFPE, Arithmetic exception. 0x0000555556bc3dcc in MEM_lockfree_freeN () (gdb) bt - 0 0x0000555556bc3dcc in MEM_lockfree_freeN () - 1 0x000055555673409a in BKE_crazyspace_build_sculpt () - 2 0x00005555567eac03 in BKE_sculpt_update_mesh_elements () - 3 0x00005555563ab611 in ed_vwpaintmode_enter_generic () - 4 0x00005555563b3d90 in wpaint_mode_toggle_exec () - 5 0x0000555556082cec in wm_operator_invoke () - 6 0x0000555556083278 in wm_operator_call_internal () - 7 0x000055555608363a in WM_operator_name_call_ptr () - 8 0x00005555562e32ab in object_mode_set_exec () - 9 0x0000555556082cec in wm_operator_invoke () - 10 0x0000555556083278 in wm_operator_call_internal () - 11 0x000055555608363a in WM_operator_name_call_ptr () - 12 0x000055555622eb2d in ui_apply_but_funcs_after () - 13 0x000055555623ed9c in ui_handler_region_menu () - 14 0x0000555556085f0a in wm_handlers_do_intern () - 15 0x00005555560868cc in wm_handlers_do () - 16 0x00005555560870b4 in wm_event_do_handlers () - 17 0x000055555607e9c0 in WM_main () #18 0x000055555606ab2b in main () ``` I'm guessing this is a depsgraph issue because of the assert in eval_get

This issue was referenced by f85b05111f

This issue was referenced by f85b05111fa4b96228a4a3969945c80fbb67f499

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JimDriscoll

Added subscriber: @JimDriscoll
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59334
No description provided.