Fix T59334: Crash initializing crazyspace on object with subsurf and displacement